# Connections

./: .gitignore  README.md  pyproject.toml  scrape_puzzles.py
backend/: bot.py  game.py  main.py  scraper.py  store.py
backend/data/: puzzles.json
frontend/: .env  index.html  package.json  vite.config.js
frontend/src/: App.jsx  Board.jsx  Tile.jsx  index.css  mobile.css  sdk.js
